Applied background:transparent to fix text selection issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,7 @@ header {
     background-color: #000;
     position: absolute;
     user-select: none;
+    background: transparent;
 }
 
 .mainNavButtonSmallScreen img:hover {
@@ -384,6 +385,7 @@ header {
 
 .mainNavSmallScreen li a {
     user-select: none;
+    background: transparent;
 }
 
 .mainNavSmallScreen li:hover {
